--- a/src/site/_includes/layouts/index.njk
+++ b/src/site/_includes/layouts/index.njk
@@ -84,6 +84,9 @@
         {{ content | hideDataview | taggify | link | safe}}
       </article>
       
+      {# Posts Gallery #}
+      {% include "components/postsGallery.njk" %}
+      
       {# Post Heatmap #}
       {% include "components/postHeatmap.njk" %}
       
