--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -130,6 +130,7 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
         });
     </script>
     {%include "components/vercelAnalytics.njk"%}
+    {%include "components/speedInsights.njk"%}
     {%include "components/backToTop.njk"%}
   </body>
 </html>
