--- a/src/site/_includes/layouts/index.njk
+++ b/src/site/_includes/layouts/index.njk
@@ -124,6 +124,7 @@
         });
     </script>
     {%include "components/vercelAnalytics.njk"%}
+    {%include "components/speedInsights.njk"%}
     {%include "components/backToTop.njk"%}
   </body>
 </html>
